# shore-mcp

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: cli.rs  gating.rs  handler.rs  lib.rs  main.rs  profile.rs  server.rs
src/tools/: character.rs  config.rs  debug.rs  log.rs  memory.rs  mod.rs  model.rs  send.rs  status.rs  usage.rs
tests/suite/: autospawn_detach.rs  gating_rules.rs  main.rs  profile_resolution.rs
